# negotiator

./: .env.docker  .env.example  .gitignore  Makefile  Procfile  README.md  alembic.ini  backlog.md  fake_auth_server.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  set-up-environment.sh
.github/workflows/: build.yml  pipeline.yml
databases/: drop_and_create_databases.sql  env.py
databases/versions/: 7301d7922bd0_create_negotiations_and_messages.py  e579fd027a10_add_order_to_messages.py
negotiator/: __main__.py  app.py  environment.py  health_api.py  index_page.py
negotiator/authentication/: allowed_emails.py  authenticate_user.py
negotiator/database_support/: database_template.py  result_mapping.py
negotiator/negotiation/: assistant.py  message_gateway.py  negotiation_gateway.py  negotiation_page.py  negotiation_service.py
negotiator/oauth/: oauth_api.py  oauth_client.py
negotiator/templates/: index.html  layout.html  negotiation.html
negotiator/web_support/: json_support.py
tests/: __init__.py  blueprint_test_support.py  db_test_support.py  test_index_page.py
tests/authentication/: test_allowed_emails.py
tests/negotiation/: test_assistant.py  test_message_gateway.py  test_negotiation_gateway.py  test_negotiation_page.py  test_negotiation_service.py
tests/oauth/: test_oauth_client.py
web-components/: index.html  package-lock.json  package.json  vite.config.js  web-test-runner.config.js
web-components/src/: main.ts
web-components/test/: render-helper.ts  test-server-endpoints.js
(+28 files in other folders)
