[tool.poetry]
name = "negotiator"
version = "0.1.0"
description = ""
authors = ["Tyson Gern <tyson@initialcapacity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
