[tool.poetry]
name = "negotiator"
version = "0.1.0"
description = ""
authors = ["Tyson Gern <tyson@initialcapacity.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
mypy = "^1.5.1"
openai = "^0.28.0"
alembic = "^1.12.0"
responses = "^0.23.3"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
